--- a/tictactoe/css/style.css
+++ b/tictactoe/css/style.css
@@ -20,14 +20,21 @@
     color:#fff
 }
 #tic-tac-toe #game {
-    float:left; 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* float:left;  */
     padding:0; 
-    clear:both
+    /* clear:both; */
 }
 .new_span {
-    width:226px
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-#tic-tac-toe #reset { 
+#tic-tac-toe #reset, #tic-tac-toe #play { 
     padding:5px 10px; 
     color:#fff; 
     font-family:Arial, Helvetica, sans-serif; 
