--- a/bandlab/css/index.css
+++ b/bandlab/css/index.css
@@ -1,3 +1,32 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
+
+.container {
+  text-align: center;
+}
+
+.nav {
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav li {
+  display: inline;
+}
+
+.nav li a {
+  color: white;
+  padding: 8px;
+  text-decoration: none;
+}
+
+.active {
+  font-weight: bold;
+  font-style: normal;
+  background-color: darkseagreen;
+}
+
+.inactive {
+  background-color: #888888;
+}
