--- a/bandlab/css/Page2.css
+++ b/bandlab/css/Page2.css
@@ -1,3 +1,17 @@
+@media all and (max-device-width: 600px) {
+  .Page2__container > button, .Page2__track > button {
+    font-size: 36px;
+    margin: 10px;
+  }
+
+  .Page2__track {
+    font-size: 48px;
+  }
+
+  .Page2__container > p {
+    font-size: 48px;
+  }
+}
 .Page2__track {
   text-align: left;
   margin: 10px;
