--- a/bandlab/css/index.css
+++ b/bandlab/css/index.css
@@ -30,3 +30,14 @@ body {
 .inactive {
   background-color: #888888;
 }
+
+@media all and (max-device-width: 599px) {
+  .app_title {
+    font-size: 72px;
+  }
+
+  .nav {
+    font-size: 48px;
+    padding: 10px;
+  }
+}
