--- a/bandlab/css/index.css
+++ b/bandlab/css/index.css
@@ -30,6 +30,12 @@ body {
   background-color: #888888;
 }
 
+@media all and (min-device-width: 600px) {
+  .app_title {
+    font-size: 36px;
+  }
+}
+
 @media all and (max-device-width: 599px) {
   .app_title {
     font-size: 72px;
@@ -45,8 +51,10 @@ body {
   border: none;
   text-align: center;
   text-decoration: none;
+  margin: 10px;
   padding: 10px 22px;
   color: white;
+  cursor: pointer;
 }
 
 .sortBtn {
@@ -61,3 +69,15 @@ body {
   background-color: saddlebrown;
 }
 
+.addBtn {
+  background-color: blueviolet;
+}
+
+.card {
+  margin: 10px;
+  padding: 20px;
+  background-color: darkcyan;
+  color: white;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
